src/test/deca/context/valid/custom/object/decl_class_init.deca
class Car {
    protected int maxSpeed;
    int wheels = 4;

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }
}