src/test/deca/context/invalid/custom/object/decl_class_init.deca
class Car {
    protected int maxSpeed;
    int wheels = 4.1;

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }
}